--- a/components/com_fabrik/language/de-DE/de-DE.com_fabrik.ini
+++ b/components/com_fabrik/language/de-DE/de-DE.com_fabrik.ini
@@ -22,7 +22,7 @@ COM_FABRIK_CONDITION="Bedingung"
 COM_FABRIK_CONFIRM_DELETE="Möchten Sie diese Sätze wirklich löschen?"
 COM_FABRIK_CONFIRM_DROP="Möchten Sie wirklich alle Sätze löschen und den PK auf 0 setzen?"
 COM_FABRIK_CONTAINS="enthält"
-COM_FABRIK_COUNT="Count"
+COM_FABRIK_COUNT="Anzahl"
 COM_FABRIK_CSV_COMPLETE="CSV Export fertig"
 COM_FABRIK_CSV_DOWNLOADING="CSV Datei lädt"
 COM_FABRIK_CSV_DOWNLOAD_HERE="Hier herunterladen"
@@ -74,7 +74,7 @@ COM_FABRIK_FORM_FIELDS="Felder"
 COM_FABRIK_FORM_NOT_PUBLISHED="Entschuldigung, dieses Formular wurde noch nicht veröffentlicht!"
 COM_FABRIK_FORM_SAVED="Formular gespeichert"
 COM_FABRIK_GO="Los"
-COM_FABRIK_GREATER_THAN="grösser als"
+COM_FABRIK_GREATER_THAN="größer als"
 COM_FABRIK_GROUP_BY="Gruppieren"
 COM_FABRIK_IMPORT_CSV="CSV importieren"
 COM_FABRIK_IMPORT_CSV_FILE="CSV Datei importieren"
@@ -129,7 +129,7 @@ COM_FABRIK_RECORDS_DELETED="Einträge gelöscht"
 COM_FABRIK_RECORD_ADDED_UPDATED="Eintrag hinzugefügt/geändert"
 COM_FABRIK_RESTARTING_MUTLIPAGE_FORM="Es scheint so, als hätten sie schon begonnen das Formular auszufüllen. Sie starten von der letzten Seite, die sie besucht haben. Wollen sie von Neuem beginnen, klicken sie den 'Löschen' Button"
 COM_FABRIK_SAVE="Speichern"
-COM_FABRIK_SAVING_TO="saving to"
+COM_FABRIK_SAVING_TO="sichere als"
 COM_FABRIK_SEARCH="Suchen"
 COM_FABRIK_SELECT="Auswählen"
 COM_FABRIK_SELECT_AT_LEAST_ONE_FILTER="Bitte wählen Sie mindestens einen Filter"
@@ -143,10 +143,10 @@ COM_FABRIK_SUCCESS="Erfolg"
 COM_FABRIK_SUM="Summe"
 COM_FABRIK_SYSTEM_PLUGIN_NOT_ACTIVE="Bitte stellen Sie sicher, dass das Fabrik system plugin installiert ist"
 COM_FABRIK_TEXT_DELIMITER="Text-Trennzeichen"
-COM_FABRIK_THIS_ITEM_HAS_BEEN_SENT_TO="This item has been sent to"
+COM_FABRIK_THIS_ITEM_HAS_BEEN_SENT_TO="Dieser Eintrag wurde gesendet an"
 
-COM_FABRIK_TOGGLE="Toggle"
-COM_FABRIK_TOTAL="Total"
+COM_FABRIK_TOGGLE="Umschalten"
+COM_FABRIK_TOTAL="Alle"
 COM_FABRIK_VALIDATING="Prüfen"
 COM_FABRIK_VALIDATION_ERROR="Überprüfung fehlgeschlagen"
 COM_FABRIK_VALUE="Wert"
